testing fix for white space wrapping -ray

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -352,6 +352,7 @@ a:focus {
     /* height: auto; */
     max-height: 11.5vh;
     overflow: hidden;
+    text-overflow: ellipsis;
     /* border: solid red; */
 }
 
@@ -377,6 +378,8 @@ pre {
     padding: 0;
     font-size: 2vh;
     font-family: 'Poppins', sans-serif;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
 }
 
 textarea {
